# C-Cpp_projects

./: readme.md
custom_allocator/: CMakeLists.txt  C_allocator.cpp  benchmark.cpp  main.cpp  pool_allocator.cpp  stack_allocator.cpp
custom_allocator/include/: allocator.h  benchmark.h  c_alloc.h  padding.h  pool_alloc.h  stack_alloc.h  stack_linked_list.h
